RESOLVED FIXED310191
REGRESSION(309465@main): Double-quoted include "TrackInfo.h" in framework header, expected angle-bracketed instead
https://bugs.webkit.org/show_bug.cgi?id=310191
Summary REGRESSION(309465@main): Double-quoted include "TrackInfo.h" in framework hea...
Jonathan Bedard
Reported 2026-03-18 09:09:29 PDT
309465@main promoted CMUtilities.h to a framework header. Update includes to reflect that.
Attachments
Jonathan Bedard
Comment 1 2026-03-18 09:09:30 PDT
Jonathan Bedard
Comment 2 2026-03-18 09:12:06 PDT
EWS
Comment 3 2026-03-18 09:14:41 PDT
Committed 309481@main (ee48a831e0a0): <https://commits.webkit.org/309481@main> Reviewed commits have been landed. Closing PR #60864 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.