REGRESSION(309465@main): Double-quoted include "TrackInfo.h" in framework header, expected angle-bracketed instead https://bugs.webkit.org/show_bug.cgi?id=310191 rdar://172835816

Unreviewed build fix.

* Source/WebCore/platform/graphics/cocoa/CMUtilities.h:

Canonical link: https://commits.webkit.org/309481@main